--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,76 @@ footer ul li{
 footer ul li a{
     color: #fff;
 }
+
+/*----------------------------- Registration page styling --------------------------------------*/
+
+.registration-header{
+    background-color: rgba(88,79,76,0.8);
+}
+
+.registration-main{
+
+    background-image: url("../images/registration-main-background2.jpg");
+    /*height: 100%;*/
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+.registration-form-sec{
+    width: 40%;
+    border: 2px solid #ff892f;
+    border-radius: 10px;
+    margin: 100px auto;
+    padding: 50px;
+    background-color: rgba(88,79,76,0.8);
+    -webkit-box-shadow: 4px 6px 53px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 6px 53px 0px rgba(0,0,0,0.75);
+    box-shadow: 4px 6px 53px 0px rgba(0,0,0,0.75);
+}
+
+.registration-form-sec h1{
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 34px;
+    /* color: #fff;*/
+    margin: 10px 0px;
+    font-weight: bold;
+    color: #ff892f;
+}
+.registration-form-sec form span{
+    font-family: 'Open Sans', sans-serif;
+    color: #ff892f;
+    font-size: 16px;
+}
+
+.registration-form-sec form input[type=text], input[type=email],input[type=password]{
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    padding: 5px;
+    border: none;
+    margin: 5px 0px 20px 0px;
+    background-color: rgba(88,79,76,1);
+    color: #ff892f;
+}
+.registration-form-sec form input[type=submit]{
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    font-size: 16px;
+    padding: 5px;
+    border: none;
+    margin: 5px 0px 20px 0px;
+    background-color: #ff892f;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+}
+.registration-form-sec p{
+    text-align: center;
+    color: #ff892f;
+}
+.registration-form-sec p a{
+    color: #fff;
+}
