--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@ a{
 nav ul{
     float: right;
 }
+.myNav .icon {
+    display: none;
+}
 nav li{
     float: left;
     margin-left: 20px;
@@ -54,12 +57,12 @@ li{
     color: #fff;
 }
 
-.head nav li:last-child a{
+.head nav li:nth-child(3) a{
     border: 2px solid #fff;
     border-radius: 5px;
     padding: 5px 3px;
 }
-.head nav li:last-child a:hover{
+.head nav li:nth-child(3) a:hover{
    color: #fff;
    background-color: rgba(255,137,47,0.4);
 }
@@ -384,6 +387,34 @@ footer ul li a:hover{
 }
 
 @media only screen and (max-width: 768px) {
+    /* Reference W3School */
+    .myNav li:not(:last-child) {display: none;}
+    .myNav li a.icon {
+        float: right;
+        display: block;
+    }
+    .myNav.hamBurgNav {position: relative;}
+    .myNav.hamBurgNav .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .myNav.hamBurgNav li {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    /* End of Reference W3School */
+
+    .head nav li:nth-child(3) a{
+        border: none;
+        /*border-radius: 5px;*/
+        padding: 0px;
+    }
+    .head nav li:nth-child(3) a:hover{
+        color: #fff;
+        background-color: transparent;
+    }
     .plan{
         width: 100% !important;
         float: none !important;
@@ -478,11 +509,12 @@ footer ul li a:hover{
         float: none;
     }
     .plan .plan-working{
-        width: 95%;
+        /*width: 95%;
         float: none;
         padding: 0px 2%;
         border-left: none;
-        min-height: 100px;
+        min-height: 100px;*/
+        display: none;
     }
     .stu-plan .plan-working{
         border-top: 3px solid rgb(104,181,43);
