--- a/css/style.css
+++ b/css/style.css
@@ -261,8 +261,8 @@ footer ul li a:hover{
     background-color: rgba(88,79,76,0.8);
 }
 
-.registration-main{
-    padding-bottom: 100px;
+.registration-main, .login-main, .welcome-main{
+    padding-bottom: 200px;
 }
 .login-main, .welcome-main{
     min-height: 900px;
