--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 .login-main, .registration-main, .welcome-main{
-    /* Reference: https://www.pinterest.ca/pin/415808978068353245 */
+    /* Image Reference: https://www.pinterest.ca/pin/415808978068353245 */
     background-image: url("../images/Back-pattern.png");
 }
 .main {
     height: 600px;
-    /* Reference: https://www.pexels.com/photo/app-earbuds-earphones-google-play-music-39592/ */
+    /* Image Reference: https://www.pexels.com/photo/app-earbuds-earphones-google-play-music-39592/ */
     background-image: url("../images/earphones.jpg");
     /*height: 100%;*/
     background-position: center;
