--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,12 @@ footer ul li a:hover{
     .fam-plan .plan-working{
         border-left: 3px solid rgb(64,87,224);
     }
+
+    .registration-form-sec, .login-form-sec{
+        width: 80%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
     footer p {
         float: none;
         width: 100%;
